--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 
-<script type="text/javascript" src="hello.bundle.js"></script>
+<script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
