--- a/index.html
+++ b/index.html
@@ -2,10 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>webpack study</title>
+    <!--在这里调用了在webpack.config.js里设置的title-->
+    <title><%= htmlWebpackPlugin.options.title %></title>
+
+    <script type="text/javascript" src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
+
 </head>
 <body>
+    <%= htmlWebpackPlugin.options.date %>
 
-<script type="text/javascript" src="bundle.js"></script>
+    <% for (var key in htmlWebpackPlugin) { %>
+        <%= key %>
+    <% } %>
+
+    <% for (var key in htmlWebpackPlugin.files) { %>
+        <%= key %> : <%= JSON.stringify(htmlWebpackPlugin.files[key]) %>
+    <% } %>
+
+    <% for (var key in htmlWebpackPlugin.options) { %>
+        <%= key %> : <%= JSON.stringify(htmlWebpackPlugin.options[key]) %>
+    <% } %>
+
+    <script type="text/javascript" src="<%= htmlWebpackPlugin.files.chunks.a.entry %>"></script>
+
+    <!--我是一行注释-->
+
 </body>
 </html>
