--- a/index.html
+++ b/index.html
@@ -5,27 +5,18 @@
     <!--在这里调用了在webpack.config.js里设置的title-->
     <title><%= htmlWebpackPlugin.options.title %></title>
 
-    <script type="text/javascript" src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
+    <!--将js直接插入页面-->
+    <script type="text/javascript">
+        <%= compilation.assets[htmlWebpackPlugin.files.chunks.main.entry.substr(htmlWebpackPlugin.files.publicPath.length)].source() %>
+    </script>
 
 </head>
 <body>
-    <%= htmlWebpackPlugin.options.date %>
-
-    <% for (var key in htmlWebpackPlugin) { %>
-        <%= key %>
+    <% for (var k in htmlWebpackPlugin.files.chunks) { %>
+        <% if (k !== 'main') { %>
+            <script type="text/javascript" src="<%= htmlWebpackPlugin.files.chunks[k].entry %>"></script>
+        <% } %>
     <% } %>
-
-    <% for (var key in htmlWebpackPlugin.files) { %>
-        <%= key %> : <%= JSON.stringify(htmlWebpackPlugin.files[key]) %>
-    <% } %>
-
-    <% for (var key in htmlWebpackPlugin.options) { %>
-        <%= key %> : <%= JSON.stringify(htmlWebpackPlugin.options[key]) %>
-    <% } %>
-
-    <script type="text/javascript" src="<%= htmlWebpackPlugin.files.chunks.a.entry %>"></script>
-
-    <!--我是一行注释-->
 
 </body>
 </html>
