--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 
     <!--将js直接插入页面-->
-    <script type="text/javascript">
-        <%= compilation.assets[htmlWebpackPlugin.files.chunks.main.entry.substr(htmlWebpackPlugin.files.publicPath.length)].source() %>
-    </script>
+    <!--<script type="text/javascript">-->
+        <!--<%= compilation.assets[htmlWebpackPlugin.files.chunks.main.entry.substr(htmlWebpackPlugin.files.publicPath.length)].source() %>-->
+    <!--</script>-->
 
 </head>
 <body>
-    <% for (var k in htmlWebpackPlugin.files.chunks) { %>
-        <% if (k !== 'main') { %>
-            <script type="text/javascript" src="<%= htmlWebpackPlugin.files.chunks[k].entry %>"></script>
-        <% } %>
-    <% } %>
+    <!--<% for (var k in htmlWebpackPlugin.files.chunks) { %>-->
+        <!--<% if (k !== 'main') { %>-->
+            <!--<script type="text/javascript" src="<%= htmlWebpackPlugin.files.chunks[k].entry %>"></script>-->
+        <!--<% } %>-->
+    <!--<% } %>-->
 
 </body>
 </html>
